# stvg-helper

./: .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  parking_cv.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: lint-python.sh
.claude/skills/: add-bot-command.md  add-menu-item.md  deploy.md
.github/workflows/: lint.yml
bot/: detector.py  handler.py  heatmap.py  metrics.py  parking.py  requirements.txt
bot/parking/: __init__.py  detector.py  heatmap.py  service.py
docs/: multi-user-plan.md
scripts/: bootstrap.sh  calibrate.py  deploy.sh  package.sh  zone_editor.py
terraform/: api_gateway.tf  dynamodb.tf  ecr.tf  eventbridge.tf  grafana.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  ssm.tf
tests/: test_background.py  test_detector.py  test_heatmap.py  test_parking.py
